--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<html>
+<head>
+
+</head>
 <body>
   <noscript> You need to enable JavaScript to run this app. </noscript>
   <div id="root"></div>
@@ -8,4 +12,7 @@ You can add webfonts, meta tags, or analytics to this file.
 The build step will place the bundled scripts into the <body> tag.
 To begin the development, run `npm start` or `yarn start`.
 To create a production bundle, use `npm run build` or `yarn build`.
---></body>
+-->
+<p>Welcome</>
+</body>
+</html>
